--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,12 +6,31 @@
     android:layout_height="match_parent"
     >
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/menu_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="sddss"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="112dp"
+        android:layout_marginEnd="32dp"
+        android:text="@string/language"
+        android:textSize="20sp"
+        android:fontFamily="@font/fredoka"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:cornerRadius="20sp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/currLangTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/fredoka"
+        android:text="@string/currLang"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/menu_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
