--- a/app/src/main/res/menu/overflow_menu.xml
+++ b/app/src/main/res/menu/overflow_menu.xml
@@ -1,8 +1,15 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/option_1"
-        android:title="1" />
-    <item android:id="@+id/option_2"
-        android:title="2" />
-    <item android:id="@+id/option_3"
-        android:title="3" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <item
+        android:id="@+id/option_1"
+        android:title="English"
+        tools:ignore="HardcodedText" />
+    <item
+        android:id="@+id/option_2"
+        android:title="Slovenčina"
+        tools:ignore="HardcodedText" />
+    <item
+        android:id="@+id/option_3"
+        android:title="3"
+        tools:ignore="HardcodedText" />
 </menu>
