--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
@@ -20,78 +21,92 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="label"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="128dp"
+                android:layout_marginEnd="16dp"
+                android:hint="Mode"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <AutoCompleteTextView
                     android:id="@+id/menu_text"
-                    android:text="@string/diff"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="none" />
+                    android:inputType="none"
+                    android:text="@string/diff" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/easyButton"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
                 android:backgroundTint="@color/buttony"
                 android:elevation="20dp"
                 android:fontFamily="@font/fredoka"
                 android:text="@string/easy"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                app:cornerRadius="10dp"
+                app:cornerRadius="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/infoTextView" />
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/playButton"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
                 android:backgroundTint="@color/buttony"
                 android:elevation="20dp"
                 android:fontFamily="@font/fredoka"
                 android:text="@string/play_buttoon"
-                android:visibility="invisible"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                app:cornerRadius="10dp"
+                android:visibility="invisible"
+                app:cornerRadius="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/infoTextView" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/mediumButon"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
                 android:backgroundTint="@color/buttony"
                 android:elevation="20dp"
                 android:fontFamily="@font/fredoka"
                 android:text="@string/medium"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                app:cornerRadius="10dp"
+                app:cornerRadius="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/easyButton" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/hardButton"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
                 android:backgroundTint="@color/buttony"
                 android:elevation="20dp"
                 android:fontFamily="@font/fredoka"
                 android:text="@string/hard"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                app:cornerRadius="10dp"
+                app:cornerRadius="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/mediumButon" />
@@ -100,7 +115,7 @@
                 android:id="@+id/infoTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="128dp"
+                android:layout_marginTop="80dp"
                 android:fontFamily="@font/fredoka"
                 android:text="@string/difficulty"
                 android:textAlignment="center"
@@ -109,32 +124,17 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
+                app:layout_constraintTop_toBottomOf="@+id/menu" />
 
-            <TextView
-                android:id="@+id/enterNameTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="36dp"
-                android:fontFamily="@font/fredoka"
-                android:text="@string/enterYourName"
-                android:textColor="?android:textColorPrimary"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.google.android.material.textfield.TextInputLayout
+        <!--    <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:textColor="?android:textColorSecondary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/enterNameTextView">
+                tools:layout_editor_absoluteY="165dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/nameInputText"
@@ -142,7 +142,7 @@
                     android:layout_height="63dp"
                     android:fontFamily="@font/fredoka"
                     android:hint="@string/name" />
-            </com.google.android.material.textfield.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
