--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -6,9 +6,12 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="0dp"
         android:layout_height="199dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -17,8 +20,9 @@
             android:id="@+id/feedbackInputText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="@string/yourFeedback"
-            android:gravity="top"/>
+            android:fontFamily="@font/fredoka"
+            android:gravity="top"
+            android:hint="@string/yourFeedback" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -28,6 +32,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
+        android:fontFamily="@font/fredoka"
+        app:cornerRadius="20sp"
         android:text="@string/submit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
