--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -38,84 +37,102 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:checkedButton="@+id/radio_button_1"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/currLangTextView">
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <RadioButton
             android:id="@+id/radio_button_1"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="60dp"
             android:text="1" />
 
         <RadioButton
             android:id="@+id/radio_button_2"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="60dp"
             android:text="2" />
 
         <RadioButton
             android:id="@+id/radio_button_3"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="60dp"
             android:text="3" />
 
         <RadioButton
             android:id="@+id/radio_button_4"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="60dp"
             android:text="4" />
 
         <RadioButton
             android:id="@+id/radio_button_5"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="60dp"
             android:text="5" />
 
     </RadioGroup>
 
-    <ImageView
-        android:id="@+id/background1"
-        android:layout_width="40dp"
-        android:layout_height="60dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup">
+
+        <ImageView
+            android:id="@+id/background1"
+            android:layout_width="50dp"
+            android:layout_height="90dp"
+            app:layout_constraintStart_toStartOf="parent"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/background1" />
+
+        <ImageView
+            android:id="@+id/background2"
+            android:layout_width="50dp"
+            android:layout_height="90dp"
+            app:layout_constraintStart_toEndOf="@+id/background1"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/background2" />
+
+        <ImageView
+            android:id="@+id/background3"
+            android:layout_width="50dp"
+            android:layout_height="90dp"
+            app:layout_constraintStart_toEndOf="@+id/background2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/background3" />
+
+        <ImageView
+            android:id="@+id/background4"
+            android:layout_width="50dp"
+            android:layout_height="90dp"
+            app:layout_constraintStart_toEndOf="@+id/background3"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/background4" />
+
+        <ImageView
+            android:id="@+id/background5"
+            android:layout_width="50dp"
+            android:layout_height="90dp"
+            app:layout_constraintStart_toEndOf="@+id/background4"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/background5" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/currLangTextView"
-        app:srcCompat="@drawable/background1" />
-
-    <ImageView
-        android:id="@+id/background2"
-        android:layout_width="40dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="92dp"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/currLangTextView"
-        app:srcCompat="@drawable/background2" />
-
-    <ImageView
-        android:id="@+id/background3"
-        android:layout_width="40dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="152dp"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/currLangTextView"
-        app:srcCompat="@drawable/background3" />
-
-    <ImageView
-        android:id="@+id/background4"
-        android:layout_width="40dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="212dp"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/currLangTextView"
-        app:srcCompat="@drawable/background4" />
-
-    <ImageView
-        android:id="@+id/background5"
-        android:layout_width="40dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="272dp"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/currLangTextView"
-        app:srcCompat="@drawable/background5" />
-
+        android:fontFamily="@font/fredoka"
+        android:text="@string/background"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/currLangTextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
