--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,4 +1,2 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="sk.uniza.fri.slivovsky.semestralnapraca.MainActivity"/>
+<menu xmlns:tools="http://schemas.android.com/tools"
+    tools:context="sk.uniza.fri.slivovsky.semestralnapraca.MainActivity" />
