--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -17,6 +17,13 @@
             android:layout_height="wrap_content"
             tools:context=".game.HraFragment">
 
+            <ImageView
+                android:id="@+id/backButton"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@drawable/arrow" />
             <Chronometer
                 android:id="@+id/timerTextView"
                 android:layout_width="77dp"
