--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,6 +25,12 @@
         <item name="android:windowBackground">@drawable/background1</item>
     </style>
 
+    <style name="SplashScreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/white</item>
+    </style>
+
     <style name="Background1">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
