--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -45,10 +45,10 @@
                 android:layout_height="28dp"
                 android:layout_marginTop="48dp"
                 android:layout_marginEnd="16dp"
-                android:lineSpacingExtra="18sp"
                 android:fontFamily="@font/fredoka"
+                android:lineSpacingExtra="18sp"
                 android:textAlignment="center"
-                android:textColor = "?android:textColorPrimary"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:visibility="invisible"
@@ -62,10 +62,10 @@
                 android:layout_height="62dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="80dp"
-                android:text="_ _ _ _ _ _ _"
                 android:fontFamily="@font/fredoka"
+                android:text="_ _ _ _ _ _ _"
                 android:textAlignment="center"
-                android:textColor = "?android:textColorPrimary"
+                android:textColor="@color/black"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -124,7 +124,7 @@
                 android:fontFamily="@font/fredoka"
                 android:text="@string/gameScore"
                 android:textAlignment="viewStart"
-                android:textColor="?android:textColorPrimary"
+                android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -199,7 +199,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="TextView"
-                    android:textColor="?android:textColorPrimary"
+                    android:textColor="@color/black"
                     android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -214,7 +214,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="4dp"
                     android:text="TextView"
-                    android:textColor="?android:textColorPrimary"
+                    android:textColor="@color/black"
                     android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -262,7 +262,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:text="TextView"
-                    android:textColor="?android:textColorPrimary"
+                    android:textColor="@color/black"
                     android:visibility="invisible"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -327,7 +327,7 @@
                 android:fontFamily="@font/fredoka"
                 android:text="6"
                 android:textAlignment="textStart"
-                android:textColor = "?android:textColorPrimary"
+                android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/livesImageView"
@@ -340,9 +340,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/wordToFindSlovoText"
                 android:layout_centerHorizontal="true"
-                android:textColor = "?android:textColorPrimary"
                 android:layout_marginTop="56dp"
                 android:textAlignment="center"
+                android:textColor="@color/black"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
