--- a/app/src/main/res/layout/fragment_score.xml
+++ b/app/src/main/res/layout/fragment_score.xml
@@ -41,7 +41,7 @@
             android:fontFamily="@font/fredoka"
             android:text="@string/top10"
             android:textAlignment="center"
-            android:textColor="?android:textColorPrimary"
+            android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
