--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -63,7 +63,7 @@
                 android:layout_marginTop="292dp"
                 android:fontFamily="@font/fredoka"
                 android:text="@string/title"
-                android:textColor="?android:textColorPrimary"
+                android:textColor="@color/black"
                 android:textSize="40sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -95,9 +95,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="128dp"
-                android:text="@string/welcome"
-                android:textColor="?android:textColorPrimary"
                 android:fontFamily="@font/fredoka"
+                android:text="@string/welcome"
+                android:textColor="@color/black"
                 android:textSize="40sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
