--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,11 +11,11 @@
         android:id="@+id/bodyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/fredoka"
         android:text="TextView"
-        android:textColor = "?android:textColorPrimary"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:fontFamily="@font/fredoka"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,7 +27,7 @@
         android:layout_marginStart="8dp"
         android:fontFamily="@font/fredoka"
         android:text="TextView"
-        android:textColor="?android:textColorPrimary"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,9 +39,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="144dp"
-        android:text="TextView"
         android:fontFamily="@font/fredoka"
-        android:textColor="?android:textColorPrimary"
+        android:text="TextView"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,10 +51,10 @@
     <TextView
         android:id="@+id/poradoveCTextView"
         android:layout_width="wrap_content"
-        android:fontFamily="@font/fredoka"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/fredoka"
         android:text="TextView"
-        android:textColor = "?android:textColorPrimary"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
