--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-
+        <item name="android:windowFullscreen">true</item>
         <!--<item name="android:textColorPrimary">#000000</item>
         <item name="android:textColorSecondary">#FFFFFF</item>-->
         -->
