--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -433,15 +433,16 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
+            <pl.droidsonroids.gif.GifImageView
                 android:id="@+id/hangmanImageView"
-                android:layout_width="124dp"
-                android:layout_height="174dp"
+                android:layout_width="270dp"
+                android:layout_height="300dp"
                 android:layout_marginTop="24dp"
+                android:src="@drawable/hangman0"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.106"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/livesImageView"
-                app:srcCompat="@drawable/obesenec_6" />
+                app:layout_constraintTop_toBottomOf="@+id/livesImageView" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/pauseLayout"
@@ -503,6 +504,7 @@
                     android:layout_height="wrap_content"
                     android:text="TextView"
                     android:textColor="@color/black"
+                    android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -517,6 +519,7 @@
                     android:layout_marginEnd="4dp"
                     android:text="TextView"
                     android:textColor="@color/black"
+                    android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -564,6 +567,7 @@
                     android:layout_marginTop="4dp"
                     android:text="TextView"
                     android:textColor="@color/black"
+                    android:visibility="invisible"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toEndOf="@+id/showPowerUpButton"
