--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -132,14 +132,14 @@
 
             <pl.droidsonroids.gif.GifImageView
                 android:id="@+id/hangmanImageView"
-                android:layout_width="200dp"
+                android:layout_width="270dp"
                 android:layout_height="300dp"
                 android:layout_marginTop="24dp"
+                android:src="@drawable/hangman1"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.113"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/livesImageView"
-                android:src="@drawable/img1"
-                 />
+                app:layout_constraintTop_toBottomOf="@+id/livesImageView" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/pauseLayout"
