--- a/app/src/main/res/menu/score_bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/score_bottom_navigation_menu.xml
@@ -2,16 +2,16 @@
     <item
         android:id="@+id/page_1"
         android:enabled="true"
-        android:icon="@drawable/home"
+        android:icon="@drawable/easy"
         android:title="@string/easy"/>
     <item
         android:id="@+id/page_2"
         android:enabled="true"
-        android:icon="@drawable/history"
+        android:icon="@drawable/hard"
         android:title="@string/medium"/>
     <item
         android:id="@+id/page_3"
         android:enabled="true"
-        android:icon="@drawable/feedback"
+        android:icon="@drawable/medium"
         android:title="@string/hard"/>
 </menu>
